<resources>
    <string name="app_name">优惠券</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">淘宝</string>
    <string name="second_fragment_label"><s>商品详情</s></string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="input_hint_text">请输入商品名称</string>
    <string name="search_button_text">搜索</string>
    <string name="tb_text">淘 宝</string>
    <string name="jd_text">京 东</string>
    <string name="pdd_text">拼多多</string>
    <string name="wph_text">唯品会</string>
    <string name="mt_text">美团</string>
    <string name="tb_text_s">淘宝</string>
    <string name="jd_text_s">京东</string>
    <string name="wm_text">活 动</string>
    <string name="dc_text">打车</string>
    <string name="price_unit">￥</string>
    <string name="sort_text">排序:</string>
    <string name="sort_all">综合</string>
    <string name="sort_price">价格</string>
    <string name="sort_volume">销量</string>
    <string name="sort_coupon">有券</string>
    <string name="activity_elem">饿了么</string>
</resources>