<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FirstFragment">

        <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linear_layout_all"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/linear_layout_search"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        app:layout_constraintTop_toTopOf="@id/linear_layout_all"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        >
                        <EditText
                                android:id="@+id/key_word"
                                android:layout_height="40dp"
                                android:layout_width="305dp"
                                android:inputType="textLongMessage"
                                android:hint="@string/input_hint_text"
                                android:layout_marginStart="8dp"
                                android:autofillHints=""
                                android:singleLine="true"
                                android:maxLines="1"
                                android:imeOptions="actionSearch"
                                android:background="@drawable/edit_text_style"/>
                        <ImageView
                                android:id="@+id/edit_clear"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:src="@mipmap/close"
                                android:layout_alignParentEnd="true"
                                android:layout_centerInParent="true"
                                android:layout_marginStart="-20dp"
                                android:layout_gravity="center"
                                android:alpha="0.6"/>
                        <Button
                                android:id="@+id/search_button"
                                android:layout_height="40dp"
                                android:layout_width="wrap_content"
                                android:minWidth="0dp"
                                android:paddingStart="10dp"
                                android:paddingEnd="10dp"
                                android:text="@string/search_button_text"
                                android:layout_marginStart="10dp"
                                app:layout_constraintStart_toStartOf="@id/key_word"/>
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/linear_layout_sort"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingTop="5dp"
                        android:paddingStart="5dp"
                        android:paddingBottom="5dp"
                        app:layout_constraintTop_toTopOf="@id/linear_layout_all"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        tools:ignore="RtlSymmetry">
                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textStyle="bold"
                                android:text="@string/sort_text"/>
                        <TextView
                                android:id="@+id/sort_all"
                                android:layout_height="wrap_content"
                                android:layout_width="wrap_content"
                                android:text="@string/sort_all"
                                android:layout_marginStart="20dp"/>
                        <TextView
                                android:id="@+id/sort_price"
                                android:layout_height="wrap_content"
                                android:layout_width="wrap_content"
                                android:text="@string/sort_price"
                                android:layout_marginStart="20dp"/>
                        <TextView
                                android:id="@+id/sort_volume"
                                android:layout_height="wrap_content"
                                android:layout_width="wrap_content"
                                android:text="@string/sort_volume"
                                android:layout_marginStart="20dp"/>
                        <TextView
                                android:id="@+id/sort_coupon"
                                android:layout_height="wrap_content"
                                android:layout_width="wrap_content"
                                android:text="@string/sort_coupon"
                                android:layout_marginStart="20dp"/>
                </androidx.appcompat.widget.LinearLayoutCompat>

                <com.example.coupon.layout.CustomLinearLayout
                        android:id="@+id/linear_layout_activity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:background="@color/purple_700"
                        android:visibility="visible"
                        app:layout_constraintTop_toTopOf="@id/linear_layout_all"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        tools:ignore="RtlSymmetry">
                        <TextView
                                android:id="@+id/activity_tb"
                                android:layout_height="wrap_content"
                                android:layout_width="wrap_content"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                android:text="@string/tb_text_s"
                                android:layout_marginStart="20dp"/>
                        <TextView
                                android:id="@+id/activity_jd"
                                android:layout_height="wrap_content"
                                android:layout_width="wrap_content"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                android:text="@string/jd_text_s"
                                android:layout_marginStart="20dp"/>
                        <TextView
                                android:id="@+id/activity_pdd"
                                android:layout_height="wrap_content"
                                android:layout_width="wrap_content"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                android:text="@string/pdd_text"
                                android:layout_marginStart="20dp"/>
                        <TextView
                                android:id="@+id/activity_elem"
                                android:layout_height="wrap_content"
                                android:layout_width="wrap_content"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                android:text="@string/activity_elem"
                                android:layout_marginStart="20dp"/>
                        <TextView
                                android:id="@+id/activity_mt"
                                android:layout_height="wrap_content"
                                android:layout_width="wrap_content"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                android:text="@string/mt_text"
                                android:layout_marginStart="20dp"/>
                        <TextView
                                android:id="@+id/activity_dc"
                                android:layout_height="wrap_content"
                                android:layout_width="wrap_content"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                android:text="@string/dc_text"
                                android:layout_marginStart="20dp"/>
                </com.example.coupon.layout.CustomLinearLayout>

                <ListView
                        android:id="@+id/good_list_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:dividerHeight="5dp"
                        app:layout_constraintTop_toBottomOf="@id/linear_layout_sort"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="@id/linear_layout_menu"/>

                <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/linear_layout_menu"
                        android:layout_width="wrap_content"
                        android:layout_height="66dp"
                        android:orientation="horizontal"
                        android:gravity="bottom"
                        app:layout_constraintBottom_toBottomOf="parent">

                        <androidx.appcompat.widget.LinearLayoutCompat
                                android:id="@+id/tb"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:layout_marginStart="5dp">
                                <androidx.cardview.widget.CardView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        app:cardCornerRadius="18dp">
                                        <ImageView
                                                android:id="@+id/tb_img"
                                                android:layout_width="36dp"
                                                android:layout_height="36dp"
                                                android:scaleType="centerCrop"
                                                android:src="@mipmap/tb_g"/>
                                </androidx.cardview.widget.CardView>
                                <TextView
                                        android:id="@+id/tb_text"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/tb_text"
                                        android:textStyle="bold"
                                        android:textSize="12sp"
                                        android:textColor="@color/purple_200"
                                        android:layout_gravity="center"/>
                        </androidx.appcompat.widget.LinearLayoutCompat>

                        <androidx.appcompat.widget.LinearLayoutCompat
                                android:id="@+id/jd"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:layout_marginStart="50dp">
                                <androidx.cardview.widget.CardView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        app:cardCornerRadius="18dp">
                                        <ImageView
                                                android:id="@+id/jd_img"
                                                android:layout_width="36dp"
                                                android:layout_height="36dp"
                                                android:scaleType="centerCrop"
                                                android:src="@mipmap/jd"/>
                                </androidx.cardview.widget.CardView>
                                <TextView
                                        android:id="@+id/jd_text"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/jd_text"
                                        android:textStyle="bold"
                                        android:textSize="12sp"
                                        android:textColor="@color/teal_200"
                                        android:layout_gravity="center"/>
                        </androidx.appcompat.widget.LinearLayoutCompat>

                        <androidx.appcompat.widget.LinearLayoutCompat
                                android:id="@+id/pdd"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:layout_marginStart="50dp">
                                <androidx.cardview.widget.CardView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        app:cardCornerRadius="18dp">
                                        <ImageView
                                                android:id="@+id/pdd_img"
                                                android:layout_width="36dp"
                                                android:layout_height="36dp"
                                                android:scaleType="centerCrop"
                                                android:src="@mipmap/pdd"/>
                                </androidx.cardview.widget.CardView>
                                <TextView
                                        android:id="@+id/pdd_text"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/pdd_text"
                                        android:textStyle="bold"
                                        android:textSize="12sp"
                                        android:textColor="@color/teal_200"
                                        android:layout_gravity="center"/>
                        </androidx.appcompat.widget.LinearLayoutCompat>

                        <androidx.appcompat.widget.LinearLayoutCompat
                                android:id="@+id/wm"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:layout_marginStart="50dp">
                                <androidx.cardview.widget.CardView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        app:cardCornerRadius="18dp">
                                        <ImageView
                                                android:id="@+id/wm_img"
                                                android:layout_width="36dp"
                                                android:layout_height="36dp"
                                                android:scaleType="centerCrop"
                                                android:src="@mipmap/wm"/>
                                </androidx.cardview.widget.CardView>
                                <TextView
                                        android:id="@+id/wm_text"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/wm_text"
                                        android:textStyle="bold"
                                        android:textSize="12sp"
                                        android:textColor="@color/teal_200"
                                        android:layout_gravity="center"/>
                        </androidx.appcompat.widget.LinearLayoutCompat>
                </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>