<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SecondFragment">

        <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/detail_layout_all"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ListView
                        android:id="@+id/detail_good_images"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"/>

                <TextView
                        android:id="@+id/detail_good_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:maxLines="2"
                        android:ellipsize="end"/>
                <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:orientation="horizontal">
                        <TextView
                                android:id="@+id/detail_good_volume"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="14sp"/>
                        <TextView
                                android:id="@+id/detail_good_province"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="right"
                                android:textSize="14sp"
                                tools:ignore="RtlHardcoded"/>
                </androidx.appcompat.widget.LinearLayoutCompat>
                <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:orientation="horizontal">
                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="14sp"
                                android:text="@string/price_unit"/>
                        <TextView
                                android:id="@+id/detail_good_sale_price"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="12sp"/>
                        <TextView
                                android:id="@+id/detail_good_final_price_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="14sp"/>
                        <TextView
                                android:id="@+id/detail_good_final_price"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/price_color"
                                android:textSize="18sp"/>
                </androidx.appcompat.widget.LinearLayoutCompat>
                <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="80dp"
                        android:orientation="horizontal">
                        <TextView
                                android:id="@+id/detail_good_coupon"
                                android:layout_width="100dp"
                                android:layout_height="50dp"
                                android:textSize="18sp"
                                android:gravity="center"
                                android:background="@color/purple_200"
                                android:text="12345"/>
                        <Button
                                android:id="@+id/button_second"
                                android:layout_width="wrap_content"
                                android:layout_height="50dp"
                                android:layout_marginStart="5dp"
                                android:text="@string/previous"
                                app:layout_constraintStart_toStartOf="@id/detail_good_coupon"
                                app:layout_constraintEnd_toEndOf="parent"
                                />
                </androidx.appcompat.widget.LinearLayoutCompat>
                <TextView
                        android:id="@+id/detail_good_detail_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:text="@string/second_fragment_label"/>
                <TextView
                        android:id="@+id/detail_good_detail_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1234353454612343534546123435345461234353454612343534546123435345461234353454612343534546"/>
                <ListView
                        android:id="@+id/detail_good_detail_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"/>

        </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>